# ai-hackaton-paris-2026

./: .gitignore  BACKEND.md  CONTRACT.md  Makefile  PRD.md  README.md
backend/: README.md  db.py  llm.py  main.py  pyproject.toml  requirements.txt  test_backend_db.py
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  logging.py
backend/app/schemas/: api.py
backend/app/services/: agent.py  db.py  llm.py  prompts.py  tools.py
backend/app/utils/: json_tools.py  sql_guard.py
backend/scripts/: sync_data.py
backend/tests/: test_json_tools.py  test_nan.py  test_stream.py
frontend/: README.md  package-lock.json  package.json  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: genui-chat.tsx
frontend/components/chat/: chat-input.tsx  chat-message.tsx
frontend/components/dashboard/: candlestick-chart.tsx  correlation-matrix.tsx  dashboard-renderer.tsx  event-timeline.tsx  executive-summary.tsx  kpi-card.tsx  line-chart.tsx
frontend/lib/: catalog.ts  duckdb.ts  json-render.tsx  llm.ts  mock-data.ts  types.ts  validate.ts
frontend/lib/__tests__/: validate.test.ts
frontend/scripts/: seed-db.ts
frontend/src/components/: chat-input.tsx  chat-messages.tsx  sidebar.tsx
frontend/src/contexts/: agent.provider.tsx  posthog.provider.tsx  voice.provider.tsx
frontend/src/hooks/: use-agent.ts  useGetSigninLocation.ts  useSessionOrNavigateToLoginPage.tsx
frontend/src/lib/: api.ts  auth-client.ts  genui-validate.ts
references/gen-ui-analytics-dashboard/: README.md
(+45 files in other folders)
