[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.4",
    "fastapi>=0.128.4",
    "httpx>=0.28.1",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.1.0",
    "langgraph>=0.4.0",
    "openai>=1.72.0",
    "pandas>=3.0.0",
    "pydantic>=2.12.5",
    "pytest>=8.3.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]
